# QBotX

./: .gitignore  LICENSE  ai.py  app.py  config_update.py  decode.py  install.ps1  install.sh  logger.py  main.py  message_handler.py  model.py  onebot.py  prompt.py  pyproject.toml  requirements.txt  save.py  templates_config.toml  旧版升级必看！！！.txt
