[project]
name = "qbotx"
version = "0.0.2"
description = "一个简单的机器人框架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "gevent==25.5.1",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "numpy==2.2.6",
    "openai==1.84.0",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pefile==2023.2.7",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pyfuze>=2.1.2",
    "pyinstaller==6.13.0",
    "pyinstaller-hooks-contrib==2025.4",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.3",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "websocket==0.2.1",
    "websockets==15.0.1",
    "zope-event==5.0",
    "zope-interface==7.2",
]
